--- a/baseframe/static/sass/baseframe-material/_helper.scss
+++ b/baseframe/static/sass/baseframe-material/_helper.scss
@@ -102,3 +102,27 @@
 	font-size: 14px;
 	line-height: 18px;
 }
+
+// ============================================================================
+// Text transform
+// ============================================================================
+
+.mui--text-uppercase {
+	text-transform: uppercase;
+}
+
+.mui--text-capitalize {
+	text-transform: capitalize;
+}
+
+// ============================================================================
+// Font weight
+// ============================================================================
+
+.mui--text-bold {
+	font-weight: 600;
+}
+
+.mui--text-bold {
+	font-weight: 700;
+}
